--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.8",
     "ethers": "^6.15.0",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^14.2.33",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "viem": "^2.39.0",
     "wagmi": "^2.19.4"
   },
